changed a few file names and added gradients colors and href links

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="./anime.js"></script>
-    <script src="crazyButtons.js"></script>
-    <link rel="stylesheet" type="text/css" href="crazyButtons.css">
+    <script src="indexJS.js"></script>
+    <link rel="stylesheet" type="text/css" href="indexStyle.css">
     <title>Crazy Buttons</title>
   </head>
   <body>
@@ -16,5 +16,10 @@
       <button class="invisibleButton" id="button">Houdini Button</button>
       <button class="thanksgivingButton disappearingButtons" id="button">After Thanksgiving Dinner Button</button>
     </section>
+    <footer>
+        <a href="mailto:sjgallen@gmail.com">My email</a>
+        <br>
+        <a href="https://en.wikipedia.org/wiki/Button">And for those who want more a history of Buttons!</a>
+    </footer>
   </body>
 </html>
